@@ -1,3 +1,8 @@
+2007-09-02  Al Riddoch  <alriddoch@zepler.org>
+
+	* Makefile.am, configure.ac: Remove the debian directory from
+	  distribution.
+
 2007-07-16  Al Riddoch  <alriddoch@zepler.org>
 
 	* configure.ac, Makefile.am: Add experimental debian packaging stuff.
